--- a/Praktikum/pom.xml
+++ b/Praktikum/pom.xml
@@ -10,6 +10,14 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <name>EAFramework</name>
     <build>
         <plugins>
